--- a/03_random.Rmd
+++ b/03_random.Rmd
@@ -15,7 +15,7 @@ load(here("models", "m8.1.rda"))
 
 What follows is the complete procedure for iterative random effect reduction as per Bates et al. These models took a *very* long time to run, with the maximal model with correlated slopes and intercepts taking over a full day on our server. As such, we include them with this notebook so they can be loaded and compared.  
 #iterative reduction of random effects specification, starting with a maximal model
-```{r}
+```{r, echo=FALSE}
 #with correlated slopes and intercepts
 #m0.1 <- lmer(score_z ~ (personality+linguistic+topic+liwc+value+task)^6 + audio +
 #             (personality+linguistic+topic+liwc+value+task+audio+model|task/model) + 
